--- a/oneway/one_way_anova.Rmd
+++ b/oneway/one_way_anova.Rmd
@@ -15,12 +15,6 @@ jupyter:
     name: python3
 ---
 
-```{python}
-import numpy as np
-import pandas as pd
-import matplotlib.pyplot as plt
-```
-
 # One-way ANOVA
 
 Imagine you have three groups, and you want to do a one-level ANOVA to test for
@@ -96,94 +90,12 @@ diamonds, and the overall mean is shown as a red 'X'.  The difference between ea
 mean and the overall mean is shown by a dashed red line. SNSQGMD - calculated via the recipe 
 above - is shown for each graph below the x axis.
 
-```{python}
-# HIDDEN CELL
+*Note: please see [this page](SNSQGMD_and_F-statistic_simulations) if you would like
+to see the code that generated the simulated data for these graphs*
 
-# a function to compute SNSQGMD
-def SNSQGMD(a,b,c):
-    
-    n_a = len(a)
-    n_b = len(b)
-    n_c = len(c)
-    
-    mean_a = a.mean()
-    mean_b = b.mean()
-    mean_c = c.mean()
-     
-    all_together = np.concatenate((a,b,c))
-    overall_mean = all_together.mean()
-    
-    SNSQGMD = np.sum([(mean_a - overall_mean)**2*n_a, (mean_b - overall_mean)**2*n_b, (mean_c - overall_mean)**2*n_c])
-    
-    return SNSQGMD.astype('int')
 
-# plotting three scenarios (large difference between group means, small difference between group means and very small difference)
-size = 10000
-group_a = np.random.normal(24, 2, size)
-group_b = np.random.normal(36, 2, size)
-group_c = np.random.normal(56, 2, size)
-all_groups = np.concatenate((group_a, group_b, group_c))
-groups =[group_a, group_b, group_c]
+<img src="SNSQGMD_sim.JPG">
 
-# a colour palette
-colours = ['black', 'grey', 'lightsteelblue']
-
-# list of group names
-abc = ['A', 'B', 'C']
-
-# the height of the mean markers
-marker_height = 50
-
-plt.figure(figsize = (16, 4))
-plt.subplot(1,3,1)
-
-for i in np.arange(3):
-    plt.hist(groups[i], color = colours[i], histtype = 'step', 
-             label = 'group '+str(abc[i]))
-    plt.plot(groups[i].mean(), marker_height ,  'D', color = colours[i], markersize = 10, label = 'group '+str(abc[i])+' mean')
-    plt.plot([groups[i].mean(), all_groups.mean()], [marker_height , marker_height ], '--', color = 'darkred')
-plt.plot(all_groups.mean(), marker_height , 'X', color = 'red', markersize = 20, label = 'mean overall')
-plt.plot([ ], [], '--', color = 'darkred', label = 'difference')
-plt.xlabel('SNSQGMD = '+str(SNSQGMD(group_a, group_b, group_c)))
-plt.ylabel('Frequency')
-plt.title('Large differences between group means')
-plt.legend(bbox_to_anchor = (1.8, -0.2))
-
-# second subplot, small difference
-group_a_small = np.random.normal(30, 2, size)
-group_b_small = np.random.normal(33, 2, size)
-group_c_small = np.random.normal(36, 2, size)
-all_groups_small = np.concatenate((group_a_small, group_b_small, group_c_small))
-groups = [group_a_small, group_b_small, group_c_small]
-
-plt.subplot(1,3,2)
-for i in np.arange(3):
-    plt.hist(groups[i], color = colours[i], histtype = 'step')
-    plt.plot(groups[i].mean(), marker_height ,  'D', color = colours[i], markersize = 10)
-    plt.plot([groups[i].mean(), all_groups_small.mean()], [marker_height , marker_height ], '--', color = 'darkred')
-plt.plot(all_groups_small.mean(), marker_height , 'X', color = 'red', markersize = 20)
-plt.xlabel('SNSQGMD = '+str(SNSQGMD(group_a_small, group_b_small, group_c_small)))
-plt.title('Small differences between group means')
-plt.yticks([])
-
-# third subplot, very small difference
-group_a_null = np.random.normal(29.5, 2, size)
-group_b_null = np.random.normal(30, 2, size)
-group_c_null = np.random.normal(30.5, 2, size)
-all_groups_null = np.concatenate((group_a_null, group_b_null, group_c_null))
-groups = [group_a_null, group_b_null, group_c_null]
-
-plt.subplot(1,3,3)
-for i in np.arange(3):
-    plt.hist(groups[i], color = colours[i], histtype = 'step')
-    plt.plot(groups[i].mean(), marker_height ,  'D', color = colours[i], markersize = 10)
-    plt.plot([groups[i].mean(), all_groups_null.mean()], [marker_height , marker_height ], '--', color = 'darkred')
-plt.plot(all_groups_null.mean(), marker_height , 'X', color = 'red', markersize = 20)
-plt.xlabel('SNSQGMD = '+str(SNSQGMD(group_a_null, group_b_null, group_c_null)))
-plt.title('Very small differences between group means')
-plt.yticks([])
-plt.show()
-```
 
 From the graphs we can see that SNSQGMD is large when the difference between
 the group means is large (shown in the leftmost graph). SNSQGMD gets smaller
@@ -225,6 +137,11 @@ Notice we have three treatment groups, the "Bath" group, the "Bath+Exercise"
 group and the "Exercise" group.
 
 ```{python}
+# import the modules we need
+import numpy as np
+import pandas as pd
+import matplotlib.pyplot as plt
+
 # Read the raw dataset
 baths = pd.read_csv('contrast-baths.txt', sep='\t')
 baths.head()
@@ -660,58 +577,11 @@ the distance between the group means and the overall means is small.
 
 To illustrate this point, the three graphs below use the same simulated data we saw earlier. The graphs show how the F statistic changes as a function of the difference between the means of three groups consisting of 10000 simulated observations. As before, the group means are shown as coloured diamonds, and the overall mean is shown as a red 'X'. The difference between each group mean and the overall mean is shown by a dashed red line. The F statistic is shown for each graph below the x axis.
 
-```{python}
-# HIDDEN CELL
+*Note: please see [this page](SNSQGMD_and_F-statistic_simulations) if you would like
+to see the code that generated the simulated data for these graphs*
 
-# plotting three scenarios (large difference between group means, small difference between group means and very small difference)
 
-plt.figure(figsize = (16, 4))
-plt.subplot(1,3,1)
-groups = [group_a, group_b, group_c]
-for i in np.arange(3):
-    plt.hist(groups[i], color = colours[i], histtype = 'step', 
-             label = 'group '+str(abc[i]))
-    plt.plot(groups[i].mean(), marker_height ,  'D', color = colours[i], markersize = 10, label = 'group '+str(abc[i])+' mean')
-    plt.plot([groups[i].mean(), all_groups.mean()], [marker_height , marker_height ], '--', color = 'darkred')
-plt.plot(all_groups.mean(), marker_height , 'X', color = 'red', markersize = 20, label = 'mean overall')
-plt.plot([ ], [], '--', color = 'darkred', label = 'difference')
-plt.xlabel('F = '+str(f_oneway(group_a, group_b, group_c).statistic.astype('int')))
-plt.ylabel('Frequency')
-plt.title('Large differences between group means')
-plt.legend(bbox_to_anchor = (1.8, -0.2))
-
-# second subplot, small difference
-
-groups = [group_a_small, group_b_small, group_c_small]
-
-plt.subplot(1,3,2)
-for i in np.arange(3):
-    plt.hist(groups[i], color = colours[i], histtype = 'step')
-    plt.plot(groups[i].mean(), marker_height ,  'D', color = colours[i], markersize = 10)
-    plt.plot([groups[i].mean(), all_groups_small.mean()], [marker_height , marker_height ], '--', color = 'darkred')
-plt.plot(all_groups_small.mean(), marker_height , 'X', color = 'red', markersize = 20)
-plt.xlabel('F = '+str(f_oneway(group_a_small, group_b_small, group_c_small).statistic.astype('int')))
-plt.title('Small differences between group means')
-plt.yticks([])
-
-# third subplot, very small difference
-group_a_null = np.random.normal(29.5, 2, size)
-group_b_null = np.random.normal(30, 2, size)
-group_c_null = np.random.normal(30.5, 2, size)
-all_groups_null = np.concatenate((group_a_null, group_b_null, group_c_null))
-groups = [group_a_null, group_b_null, group_c_null]
-
-plt.subplot(1,3,3)
-for i in np.arange(3):
-    plt.hist(groups[i], color = colours[i], histtype = 'step')
-    plt.plot(groups[i].mean(), marker_height ,  'D', color = colours[i], markersize = 10)
-    plt.plot([groups[i].mean(), all_groups_null.mean()], [marker_height , marker_height ], '--', color = 'darkred')
-plt.plot(all_groups_null.mean(), marker_height , 'X', color = 'red', markersize = 20)
-plt.xlabel('F = '+str(f_oneway(group_a_null, group_b_null, group_c_null).statistic.astype('int')))
-plt.title('Very small differences between group means')
-plt.yticks([])
-plt.show()
-```
+<img src="F_stat_sim.JPG">
 
 ```{python}
 
